<resources>
    <string name="app_name">Companion App Course</string>

    <string name="call_support_sr_no">Serial Number</string>
    <string name="call_support_email">Email Address</string>
    <string name="call_support_pdescription">Problem Description</string>

    <string name="forgot_password_email">Enter Email ID</string>
    <string name="login_password">Password (6 or more characters)</string>

    <string name="register_first_name">Enter First Name</string>
    <string name="register_last_name">Enter Last Name</string>
    <string name="register_aadhaar_number">12 Digit Aadhaar Number</string>
    <string name="register_birth_date">YYYY-MM-DD</string>
    <string name="register_mobile_no">Mobile No.</string>
    <string name="register_email_id">Enter Email ID</string>
    <string name="register_home_address">House No, Landmark, Village, Mandal</string>
    <string name="register_password">Enter Password</string>

    <string name="travel_city">Enter City</string>
    <string name="travel_state">Enter State</string>
    <string name="travel_country">Enter Country</string>

    <string name="doctor_date">12-Nov-2020</string>
    <string name="doctor_time">7:50 PM</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="prescription_doctor_name">Enter Doctor Name</string>
    <string name="prescription_medication_name">Enter Medication</string>

    <string name="reminder_dialog_remindmeto">Remind me to...</string>
    <string name="reminder_dialog_repeat">Every Hour</string>

    <string name="covid_vaccine_facility_name">Facility Name</string>
    <string name="covid_vaccine_location">Location</string>
    <string name="covid_vaccine_time_of_vaccination">HH:MM</string>

    <string name="covid_aefi1_batch_no">000000</string>
    <string name="covid_aefi1_notes">Description of the adverse events</string>

    <string name="aefi_reporters_name">Enter Reporters Name</string>
    <string name="aefi_reporters_designation">Enter Reporters Designation</string>
    <string name="aefi_reporters_mobile_no">Enter Reporters Mobile No.</string>
    <string name="aefi_reporters_address">House No, Landmark, Village, Mandal</string>


</resources>