<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Family">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="259dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginStart="17.5dp"
                android:layout_marginTop="15dp"
                android:layout_weight="0"
                android:fontFamily="@font/attenroundnewbook"
                android:text="First Name"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="17dp"
                android:layout_marginTop="2.5dp"
                android:layout_marginEnd="17dp"
                android:background="@drawable/rounded_corners"
                android:drawableLeft="@drawable/account_icon"
                android:fontFamily="@font/attenroundnewbook"
                android:hint="@string/register_first_name"
                android:inputType="text"
                android:textAlignment="textStart"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textSize="14sp"
                android:textCursorDrawable = "@null"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginStart="17.5dp"
                android:layout_marginTop="17.5dp"
                android:layout_weight="0"
                android:fontFamily="@font/attenroundnewbook"
                android:text="Last Name"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/surname"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="17dp"
                android:layout_marginTop="2.5dp"
                android:layout_marginEnd="17dp"
                android:background="@drawable/rounded_corners"
                android:drawableLeft="@drawable/account_icon"
                android:fontFamily="@font/attenroundnewbook"
                android:hint="@string/register_last_name"
                android:inputType="text"
                android:textAlignment="textStart"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textSize="14sp"
                android:textCursorDrawable = "@null"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginStart="17.5dp"
                android:layout_marginTop="17.5dp"
                android:layout_weight="0"
                android:fontFamily="@font/attenroundnewbook"
                android:text="Aadhar Number"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/aadhar_number"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="17dp"
                android:layout_marginTop="2.5dp"
                android:layout_marginEnd="17dp"
                android:background="@drawable/rounded_corners"
                android:drawableLeft="@drawable/fingerprint_icon"
                android:fontFamily="@font/attenroundnewbook"
                android:hint="@string/register_aadhaar_number"
                android:inputType="text"
                android:textAlignment="textStart"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textSize="14sp"
                android:textCursorDrawable = "@null"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginStart="17.5dp"
                android:layout_marginTop="17.5dp"
                android:layout_weight="0"
                android:fontFamily="@font/attenroundnewbook"
                android:text="Birth Date"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/birthday"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="17dp"
                android:layout_marginTop="2.5dp"
                android:layout_marginEnd="17dp"
                android:background="@drawable/rounded_corners"
                android:drawableLeft="@drawable/calendar_icon"
                android:fontFamily="@font/attenroundnewbook"
                android:hint="@string/register_birth_date"
                android:inputType="text"
                android:textAlignment="textStart"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textSize="14sp"
                android:focusable="false"
                android:clickable="true"
                android:editable="false"/>

            <RadioGroup
                android:id="@+id/gender_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/view_below"
                android:layout_marginTop="13dp"
                android:orientation="horizontal"
                android:checkedButton="@+id/male">

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="45dp"
                    android:layout_weight="1"
                    android:text="Male"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:buttonTint="@color/colorPrimary" />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="45dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_weight="1"
                    android:text="Female"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:buttonTint="@color/colorPrimary" />

                <RadioButton
                    android:id="@+id/others"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_weight="1"
                    android:text="Others"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:buttonTint="@color/colorPrimary"/>

            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginStart="17.5dp"
                android:layout_marginTop="17.5dp"
                android:layout_weight="0"
                android:fontFamily="@font/attenroundnewbook"
                android:text="Mobile Number"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/mobile"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="17dp"
                android:layout_marginTop="2.5dp"
                android:layout_marginEnd="17dp"
                android:background="@drawable/rounded_corners"
                android:drawableLeft="@drawable/phone_icon"
                android:fontFamily="@font/attenroundnewbook"
                android:hint="@string/register_mobile_no"
                android:inputType="text"
                android:textAlignment="textStart"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textSize="14sp"
                android:textCursorDrawable = "@null"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginStart="17.5dp"
                android:layout_marginTop="17.5dp"
                android:layout_weight="0"
                android:fontFamily="@font/attenroundnewbook"
                android:text="Email ID"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="17dp"
                android:layout_marginTop="2.5dp"
                android:layout_marginEnd="17dp"
                android:background="@drawable/rounded_corners"
                android:drawableLeft="@drawable/forgot_password_email_icon"
                android:fontFamily="@font/attenroundnewbook"
                android:hint="@string/register_email_id"
                android:inputType="text"
                android:textAlignment="textStart"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textSize="14sp"
                android:textCursorDrawable = "@null"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginStart="17.5dp"
                android:layout_marginTop="17.5dp"
                android:layout_weight="0"
                android:fontFamily="@font/attenroundnewbook"
                android:text="Home Address"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="17dp"
                android:layout_marginTop="2.5dp"
                android:layout_marginEnd="17dp"
                android:background="@drawable/rounded_corners"
                android:drawableLeft="@drawable/home_icon"
                android:fontFamily="@font/attenroundnewbook"
                android:hint="@string/register_home_address"
                android:inputType="text"
                android:textAlignment="textStart"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textSize="14sp"
                android:textCursorDrawable = "@null" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Use my current location"
                android:layout_marginStart="17.5dp"
                android:layout_marginTop="7.5dp"
                android:layout_marginEnd="16dp"
                android:textSize="15dp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:fontFamily="@font/attenroundnewbook"/>

            <TextView
                android:id="@+id/errorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="43dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="42.5dp"
                android:fontFamily="@font/attenroundnewbook"
                android:visibility="gone"
                android:textColor="@android:color/holo_red_light"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/registerButton"
                android:layout_width="fill_parent"
                android:layout_height="56dp"
                android:layout_gravity="center|bottom"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_corner_button"
                android:fontFamily="@font/attenroundnewbook"
                android:text="Save"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>